<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".SegundoActivity">

        <TextView
            android:id="@+id/tvNombreUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvNombreUsuario"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDptoUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvDptoUsuario"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNombreUsuario" />

        <TextView
            android:id="@+id/tvTituloLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/tvTituloLista"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDptoUsuario" />

        <ListView
            android:id="@+id/lvEquiposCargo"
            android:layout_width="368dp"
            android:layout_height="211dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloLista" />

        <Button
            android:id="@+id/btnCargarEquipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="8dp"
            android:text="@string/btnCargarEquipo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lvEquiposCargo" />

        <Button
            android:id="@+id/btnDescargarEquipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/btnDescargarEquipo"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnCargarEquipo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toEndOf="@+id/btnCargarEquipo" />

        <AutoCompleteTextView
            android:id="@+id/autoTvNroSerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/autoTvNroSerieHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:completionThreshold="5"
            app:layout_constraintTop_toBottomOf="@+id/btnCargarEquipo" />

        <TextView
            android:id="@+id/tvEtqDescEquipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/tvEtqDescEquipo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoTvNroSerie" />

        <TextView
            android:id="@+id/tvEtqValorEquipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvEtqValorEquipo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEtqDescEquipo" />

        <TextView
            android:id="@+id/tvDescEquipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text=""
            app:layout_constraintBaseline_toBaselineOf="@+id/tvEtqDescEquipo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEtqDescEquipo" />

        <TextView
            android:id="@+id/tvValorEquipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text=""
            app:layout_constraintBaseline_toBaselineOf="@+id/tvEtqValorEquipo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEtqValorEquipo" />

        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/btnFinalizar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEtqValorEquipo" />

        <TextView
            android:id="@+id/tvEtiquetaTotal"
            android:layout_width="92dp"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvEtiquetaTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.873"
            app:layout_constraintStart_toEndOf="@+id/tvNombreUsuario"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTotalMonto"
            android:layout_width="96dp"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="$ 0"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.895"
            app:layout_constraintStart_toEndOf="@+id/tvDptoUsuario"
            app:layout_constraintTop_toBottomOf="@+id/tvEtiquetaTotal" />

</android.support.constraint.ConstraintLayout>